fix contents overflow

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -107,6 +107,9 @@
         }
       }
       .bottom-contents-wrap {
+        .text-xs-center {
+          margin-bottom: 50px;
+        }
         button {
           // float: right;
           border-radius: 5px;
